--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "url": "git+https://github.com/solarenterprises/Solar-Card-API-Helper.git"
   },
   "dependencies": {
-    "axios": "^1.6.3",
     "big.js": "^5.2.2",
-    "request": "^2.88.0"
+    "ky": "^1.7.2",
+    "request": "^2.88.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {},
   "scripts": {
