--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "url": "git+https://github.com/solarenterprises/Solar-Card-API-Helper.git"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "big.js": "^5.2.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "ky": "^1.7.2",
+    "mongoose": "^8.8.4",
+    "path": "^0.12.7",
     "request": "^2.88.0",
     "socket.io": "^4.8.1"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node "
   },
   "author": "Solar Enterprises",
   "license": "MIT"
