--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node "
+    "start": "node index.mjs"
   },
   "author": "Solar Enterprises",
   "license": "MIT"
