--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "express": "^4.21.2",
     "ky": "^1.7.2",
     "mongoose": "^8.8.4",
+    "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "socket.io": "^4.8.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.mjs"
+    "start": "nodemon index.mjs"
   },
   "author": "Solar Enterprises",
   "license": "MIT"
