--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nodemon": "^3.1.7",
     "path": "^0.12.7",
     "request": "^2.88.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "url": "^0.11.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
